fix: overflowing article content

--- a/template/src/index.css
+++ b/template/src/index.css
@@ -167,7 +167,8 @@ footer div {
 #article article>div:first-child {
     display: flex;
     flex-direction: column;
-    gap: 1rem
+    gap: 1rem;
+    min-width: 0;
 }
 
 #article article>div:last-child {
